hard-gists/5463a2fbac8facf55d74/run.log
=== Docker Run Log for 5463a2fbac8facf55d74 ===
Started at: Mi 29. Okt 15:42:24 CET 2025

[2025-10-29 15:42:25] START: Running container for 5463a2fbac8facf55d74
[2025-10-29 15:42:25] SUCCESS: Container c5343d554220ee8a674e3a75c8ca6c22bcd2d8e1f2a40fc3301aec43d40fcdc5 started for 5463a2fbac8facf55d74
=== Container logs for 5463a2fbac8facf55d74 ===
  File "/snippet.py", line 58
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 5463a2fbac8facf55d74 ===
[2025-10-29 15:42:27] INFO: Container c5343d554220ee8a674e3a75c8ca6c22bcd2d8e1f2a40fc3301aec43d40fcdc5 has stopped
